--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,10 @@
 title: TensorFlow Patterns
 email:
-description: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
-
-# Build settings
+description: Collection of software patterns for TensorFlow projects.
+baseurl: ""
+url: ""
+github_username: guildai
 markdown: kramdown
-theme: minima
-gems:
-  - jekyll-feed
 exclude:
   - Gemfile
   - Gemfile.lock
