--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: TensorFlow Patterns
+title: TensorFlow&trade; Patterns
 email:
 description: Collection of software patterns for TensorFlow projects.
 baseurl: ""
