--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,5 +2,7 @@
   link:  /
 - title: The Patterns
   link:  /patterns/
+- title: Contribute
+  link:  /contribute/
 - title: About
   link:  /about/
