--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,6 +2,8 @@
   link:  /
 - title: The Patterns
   link:  /patterns/
+- title: Scopes
+  link: /scopes/
 - title: Contribute
   link:  /contribute/
 - title: About
